Fix status on mobile mode

--- a/styles.css
+++ b/styles.css
@@ -464,6 +464,11 @@ body {
         padding: 16px 20px;
     }
 
+        .status{
+        margin-top: 30px;
+        margin-bottom: 14px;
+    }
+
     .hero {
         padding: 0 20px;
         margin: 80px auto 60px;
